# qiita_mnist_with_tflite_cpp

./: CMakeLists.txt  README.md  conv_mnist.h5  conv_mnist.tflite  main.cpp  mnist_convert.py  mnist_infer.py  mnist_infer_tflite.py  mnist_train.py
